# PLIX

./: .gitignore  CITATION.cff  CONTRIBUTING  README.rst  setup.cfg  sphinx_requirements.txt
docs/source/: README.rst  code.rst  conf.py  index.rst
evaluation/: README.md  ablation_evaluator.py  ablation_study.py  arttabgen_evaluation.py  arttabgen_evaluator.py  plix_evaluation.py
evaluation/data/: core.ttl  core_normalized.ttl  motor.ttl  motor_normalized.ttl  star-sensor.ttl  star-sensor_normalized.ttl
evaluation/helpers/: format_ontology.py  ontology_properties.py  ontology_utils.py
evaluation/spacy_/: spacy_extended_row_evaluation.py  spacy_extended_row_unit_evaluation.py  spacy_extended_table_evaluation.py  spacy_extended_table_unit_evaluation.py  spacy_simple_row_evaluation.py  spacy_simple_row_units_evaluation.py  spacy_simple_table_evaluation.py  spacy_simple_table_units_evaluation.py  stanza_extended_unit_evaluation.py  stanza_simple_unit_evaluation.py
example/: README.md  example_indiv_steps.py  example_package.py  pipeline_main.py
example/data/: motor_dk.json  vocab.txt
src/plix/: __init__.py  config.py  nlp_assets.py  pipeline.py
src/plix/classes/: normalizer.py  pdf_data_extractor.py  table_coordinate_calculator.py  table_coordinates_client.py  table_info_extractor.py  text_classifier.py  text_info_extractor.py  tokenizer.py
src/plix/helpers/: common_functions.py  extraction_utils.py  kvu_utils.py  table_utils.py  text_utils.py
