[metadata]
name = PLIX
version = attr: plix.__version__
license = Apache 2.0
url = TODO
author = Sarah Boening
author_email = sarah.boening@dlr.de
classifiers = 
    License :: Apache 2.0 License
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir = 
    =src

packages = find_namespace:

install_requires = 
    camelot-py[all]==0.9.0
    ftfy
    nltk
    numpy
    opencv-python
    pandas
    Pattern
    pdf2image
    pdfminer.six
    Pillow
    pint
    pyspellchecker
    pytesseract
    rdflib
    text-unidecode
    validators

setup_requires = 
    pytest-runner
    pytest-pylint

tests_require = 
    pylint-quotes
    pytest
    pytest-codestyle
    pytest-cov

[options.packages.find]
    where = plix

[aliases]
test = pytest

[tool:pytest]
addopts =
    --pylint
    --cov-branch
    --no-cov-on-fail
    --cov-fail-under=100
    --cov=ontocode
    --cov-report term-missing:skip-covered
    --codestyle
    -p no:warnings
minversion = 4
testpaths = . tests src
